src/main/java/com/kasirgalabs/thumb2/ProcessorParser.java
// Generated from Processor.g4 by ANTLR 4.7
package com.kasirgalabs.thumb2;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProcessorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, REGISTER=79, PC=80, 
		LR=81, LABEL=82, STRING=83, DECIMAL=84, HEX=85, DOUBLE_QUOTE=86, COLON=87, 
		LBRACE=88, RBRACE=89, ASSIGN=90, LBRACK=91, RBRACK=92, DASH=93, COMMA=94, 
		COMMENT=95, LINE_COMMENT=96, WS=97, EOL=98;
	public static final int
		RULE_prog = 0, RULE_line = 1, RULE_instruction = 2, RULE_arithmetic = 3, 
		RULE_multiplyAndDivide = 4, RULE_move = 5, RULE_shift = 6, RULE_compare = 7, 
		RULE_logical = 8, RULE_branch = 9, RULE_singleDataMemory = 10, RULE_stack = 11, 
		RULE_add = 12, RULE_adds = 13, RULE_adc = 14, RULE_adcs = 15, RULE_sub = 16, 
		RULE_subs = 17, RULE_sbc = 18, RULE_sbcs = 19, RULE_rsb = 20, RULE_rsbs = 21, 
		RULE_rsc = 22, RULE_rscs = 23, RULE_mul = 24, RULE_muls = 25, RULE_mla = 26, 
		RULE_mlas = 27, RULE_mls = 28, RULE_sdiv = 29, RULE_udiv = 30, RULE_mov = 31, 
		RULE_movs = 32, RULE_mvn = 33, RULE_mvns = 34, RULE_movt = 35, RULE_asr = 36, 
		RULE_asrs = 37, RULE_lsl = 38, RULE_lsls = 39, RULE_lsr = 40, RULE_lsrs = 41, 
		RULE_ror = 42, RULE_rors = 43, RULE_rrx = 44, RULE_rrxs = 45, RULE_rbit = 46, 
		RULE_cmp = 47, RULE_cmn = 48, RULE_tst = 49, RULE_teq = 50, RULE_and = 51, 
		RULE_ands = 52, RULE_eor = 53, RULE_eors = 54, RULE_orr = 55, RULE_orrs = 56, 
		RULE_orn = 57, RULE_orns = 58, RULE_bic = 59, RULE_bics = 60, RULE_b = 61, 
		RULE_beq = 62, RULE_bne = 63, RULE_bcs = 64, RULE_bhs = 65, RULE_bcc = 66, 
		RULE_blo = 67, RULE_bmi = 68, RULE_bpl = 69, RULE_bvs = 70, RULE_bvc = 71, 
		RULE_bhi = 72, RULE_bls = 73, RULE_bge = 74, RULE_blt = 75, RULE_bgt = 76, 
		RULE_ble = 77, RULE_bal = 78, RULE_bl = 79, RULE_ldr = 80, RULE_ldrb = 81, 
		RULE_ldrh = 82, RULE_str = 83, RULE_strb = 84, RULE_strh = 85, RULE_memoryAddress = 86, 
		RULE_immediateOffset = 87, RULE_postIndexedImmediate = 88, RULE_registerOffset = 89, 
		RULE_postIndexedRegister = 90, RULE_push = 91, RULE_pop = 92, RULE_regList = 93, 
		RULE_rd = 94, RULE_rn = 95, RULE_rm = 96, RULE_rs = 97, RULE_operand2 = 98, 
		RULE_registerShiftedByRegister = 99, RULE_registerShiftedByConstant = 100, 
		RULE_shiftOption = 101, RULE_opsh = 102, RULE_sh = 103, RULE_offset = 104, 
		RULE_imm16 = 105, RULE_imm12 = 106, RULE_imm8m = 107, RULE_label = 108, 
		RULE_data = 109, RULE_asciz = 110, RULE_number = 111;
	public static final String[] ruleNames = {
		"prog", "line", "instruction", "arithmetic", "multiplyAndDivide", "move", 
		"shift", "compare", "logical", "branch", "singleDataMemory", "stack", 
		"add", "adds", "adc", "adcs", "sub", "subs", "sbc", "sbcs", "rsb", "rsbs", 
		"rsc", "rscs", "mul", "muls", "mla", "mlas", "mls", "sdiv", "udiv", "mov", 
		"movs", "mvn", "mvns", "movt", "asr", "asrs", "lsl", "lsls", "lsr", "lsrs", 
		"ror", "rors", "rrx", "rrxs", "rbit", "cmp", "cmn", "tst", "teq", "and", 
		"ands", "eor", "eors", "orr", "orrs", "orn", "orns", "bic", "bics", "b", 
		"beq", "bne", "bcs", "bhs", "bcc", "blo", "bmi", "bpl", "bvs", "bvc", 
		"bhi", "bls", "bge", "blt", "bgt", "ble", "bal", "bl", "ldr", "ldrb", 
		"ldrh", "str", "strb", "strh", "memoryAddress", "immediateOffset", "postIndexedImmediate", 
		"registerOffset", "postIndexedRegister", "push", "pop", "regList", "rd", 
		"rn", "rm", "rs", "operand2", "registerShiftedByRegister", "registerShiftedByConstant", 
		"shiftOption", "opsh", "sh", "offset", "imm16", "imm12", "imm8m", "label", 
		"data", "asciz", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'nop'", "'add'", "'adds'", "'adc'", "'adcs'", "'sub'", "'subs'", 
		"'sbc'", "'sbcs'", "'rsb'", "'rsbs'", "'rsc'", "'rscs'", "'mul'", "'muls'", 
		"'mla'", "'mlas'", "'mls'", "'sdiv'", "'udiv'", "'mov'", "'movs'", "'mvn'", 
		"'mvns'", "'movt'", "'asr'", "'asrs'", "'lsl'", "'lsls'", "'lsr'", "'lsrs'", 
		"'ror'", "'rors'", "'rrx'", "'rrxs'", "'rbit'", "'cmp'", "'cmn'", "'tst'", 
		"'teq'", "'and'", "'ands'", "'eor'", "'eors'", "'orr'", "'orrs'", "'orn'", 
		"'orns'", "'bic'", "'bics'", "'b'", "'beq'", "'bne'", "'bcs'", "'bhs'", 
		"'bcc'", "'blo'", "'bmi'", "'bpl'", "'bvs'", "'bvc'", "'bhi'", "'bls'", 
		"'bge'", "'blt'", "'bgt'", "'ble'", "'bal'", "'bl'", "'ldr'", "'ldrb'", 
		"'ldrh'", "'str'", "'strb'", "'strh'", "'push'", "'pop'", "'.asciz'", 
		null, "'pc'", "'lr'", null, null, null, null, "'\"'", "':'", "'{'", "'}'", 
		"'='", "'['", "']'", "'#'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "REGISTER", "PC", "LR", "LABEL", 
		"STRING", "DECIMAL", "HEX", "DOUBLE_QUOTE", "COLON", "LBRACE", "RBRACE", 
		"ASSIGN", "LBRACK", "RBRACK", "DASH", "COMMA", "COMMENT", "LINE_COMMENT", 
		"WS", "EOL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Processor.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProcessorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> EOL() { return getTokens(ProcessorParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(ProcessorParser.EOL, i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcessorVisitor ) return ((ProcessorVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(228); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(225);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61) | (1L << T__62))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (T__63 - 64)) | (1L << (T__64 - 64)) | (1L << (T__65 - 64)) | (1L << (T__66 - 64)) | (1L << (T__67 - 64)) | (1L << (T__68 - 64)) | (1L << (T__69 - 64)) | (1L << (T__70 - 64)) | (1L << (T__71 - 64)) | (1L << (T__72 - 64)) | (1L << (T__73 - 64)) | (1L << (T__74 - 64)) | (1L << (T__75 - 64)) | (1L << (T__76 - 64)) | (1L << (LABEL - 64)))) != 0)) {
					{
					setState(224);
					line();
					}
				}

				setState(227);
				match(EOL);
				}
				}
				setState(230); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61) | (1L << T__62))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (T__63 - 64)) | (1L << (T__64 - 64)) | (1L << (T__65 - 64)) | (1L << (T__66 - 64)) | (1L << (T__67 - 64)) | (1L << (T__68 - 64)) | (1L << (T__69 - 64)) | (1L << (T__70 - 64)) | (1L << (T__71 - 64)) | (1L << (T__72 - 64)) | (1L << (T__73 - 64)) | (1L << (T__74 - 64)) | (1L << (T__75 - 64)) | (1L << (T__76 - 64)) | (1L << (LABEL - 64)) | (1L << (EOL - 64)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcessorVisitor ) return ((ProcessorVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(235);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(232);
				instruction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(233);
				label();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(234);
				data();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public ArithmeticContext arithmetic() {
			return getRuleContext(ArithmeticContext.class,0);
		}
		public MultiplyAndDivideContext multiplyAndDivide() {
			return getRuleContext(MultiplyAndDivideContext.class,0);
		}
		public MoveContext move() {
			return getRuleContext(MoveContext.class,0);
		}
		public ShiftContext shift() {
			return getRuleContext(ShiftContext.class,0);
		}
		public CompareContext compare() {
			return getRuleContext(CompareContext.class,0);
		}
		public LogicalContext logical() {
			return getRuleContext(LogicalContext.class,0);
		}
		public BranchContext branch() {
			return getRuleContext(BranchContext.class,0);
		}
		public SingleDataMemoryContext singleDataMemory() {
			return getRuleContext(SingleDataMemoryContext.class,0);
		}
		public StackContext stack() {
			return getRuleContext(StackContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcessorVisitor ) return ((ProcessorVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		try {
			setState(247);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(237);
				arithmetic();
				}
				break;
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
				enterOuterAlt(_localctx, 2);
				{
				setState(238);
				multiplyAndDivide();
				}
				break;
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
				enterOuterAlt(_localctx, 3);
				{
				setState(239);
				move();
				}
				break;
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
			case T__35:
				enterOuterAlt(_localctx, 4);
				{
				setState(240);
				shift();
				}
				break;
			case T__36:
			case T__37:
				enterOuterAlt(_localctx, 5);
				{
				setState(241);
				compare();
				}
				break;
			case T__38:
			case T__39:
			case T__40:
			case T__41:
			case T__42:
			case T__43:
			case T__44:
			case T__45:
			case T__46:
			case T__47:
			case T__48:
			case T__49:
				enterOuterAlt(_localctx, 6);
				{
				setState(242);
				logical();
				}
				break;
			case T__50:
			case T__51:
			case T__52:
			case T__53:
			case T__54:
			case T__55:
			case T__56:
			case T__57:
			case T__58:
			case T__59:
			case T__60:
			case T__61:
			case T__62:
			case T__63:
			case T__64:
			case T__65:
			case T__66:
			case T__67:
			case T__68:
				enterOuterAlt(_localctx, 7);
				{
				setState(243);
				branch();
				}
				break;
			case T__69:
			case T__70:
			case T__71:
			case T__72:
			case T__73:
			case T__74:
				enterOuterAlt(_localctx, 8);
				{
				setState(244);
				singleDataMemory();
				}
				break;
			case T__75:
			case T__76:
				enterOuterAlt(_localctx, 9);
				{
				setState(245);
				stack();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 10);
				{
				setState(246);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithmeticContext extends ParserRuleContext {
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public AddsContext adds() {
			return getRuleContext(AddsContext.class,0);
		}
		public AdcContext adc() {
			return getRuleContext(AdcContext.class,0);
		}
		public AdcsContext adcs() {
			return getRuleContext(AdcsContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public SubsContext subs() {
			return getRuleContext(SubsContext.class,0);
		}
		public SbcContext sbc() {
			return getRuleContext(SbcContext.class,0);
		}
		public SbcsContext sbcs() {
			return getRuleContext(SbcsContext.class,0);
		}
		public RsbContext rsb() {
			return getRuleContext(RsbContext.class,0);
		}
		public RsbsContext rsbs() {
			return getRuleContext(RsbsContext.class,0);
		}
		public RscContext rsc() {
			return getRuleContext(RscContext.class,0);
		}
		public RscsContext rscs() {
			return getRuleContext(RscsContext.class,0);
		}
		public ArithmeticContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcessorVisitor ) return ((ProcessorVisitor<? extends T>)visitor).visitArithmetic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArithmeticContext arithmetic() throws RecognitionException {
		ArithmeticContext _localctx = new ArithmeticContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_arithmetic);
		try {
			setState(261);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(249);
				add();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(250);
				adds();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(251);
				adc();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 4);
				{
				setState(252);
				adcs();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 5);
				{
				setState(253);
				sub();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 6);
				{
				setState(254);
				subs();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 7);
				{
				setState(255);
				sbc();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 8);
				{
				setState(256);
				sbcs();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 9);
				{
				setState(257);
				rsb();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 10);
				{
				setState(258);
				rsbs();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 11);
				{
				setState(259);
				rsc();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 12);
				{
				setState(260);
				rscs();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
